# big-data-rpa-v3

./: .cursorrules  .manifest  GEMINI.md  README.md  Windows-Troubleshooting.md  Windows-部署说明.md  build-windows-v2.ps1  check-target-machine.ps1  package.json  pnpm-lock.yaml  tailwind.config.js  test-windows-build.ps1  vite.config.ts
.github/workflows/: tauri.yaml
pkg/: Install ChmodBPF.pkg  Uninstall ChmodBPF.pkg
src/: App.vue  main.ts
src-tauri/: Cargo.toml  app.manifest  build.rs  tauri.conf.json
src-tauri/resources/: README.md
src-tauri/src/: admin_utils.rs  lib.rs  main.rs  packet_capture.rs
src-tauri/src/auth/: manager.rs  mod.rs
src-tauri/src/auth/systems/: mod.rs
src/stores/: index.ts  proxyStore.ts
src/views/Dashboard/: index.vue
