[package]
name = "big-data-rpa-v3"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "big_data_rpa_v3_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-log = { version = "2.0.0-beta.10", features = ["colored"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
pcap = "2.2.0"
pktparse = "0.7.1"
etherparse = "0.13.0"
log = "0.4"
anyhow = "1.0"
once_cell = "1.18"

[package.metadata.tauri.bundle.windows]
webview-install-mode = ["download"]
manifest-file = "manifest.xml"

