[package]
name = "big-data-rpa-v3"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "big_data_rpa_v3_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-log = { version = "2.0.0-beta.10", features = ["colored"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
pcap = "2.2.0"
pktparse = "0.7.1"
etherparse = "0.13.0"
log = "0.4"
anyhow = "1.0"
once_cell = "1.18"
regex = "1.11.1"

# Windows 特定依赖
[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_System_LibraryLoader",
    "Win32_System_SystemServices",
    "Win32_NetworkManagement_IpHelper",
    "Win32_NetworkManagement_Ndis",
    "Win32_Networking_WinSock",
] }

# 静态链接 CRT 以减少运行时依赖
[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true

# Windows 特定构建配置
[target.'cfg(windows)'.build-dependencies]
cc = "1.0"

# 确保静态链接
[package.metadata.windows]
subsystem = "windows"
